<resources>
    <string name="app_name">PersonKontroll</string>
    <string name="navigation_view_header_title">PersonKontroll</string>
    <string name="loading">Laster...</string>
    <string name="Dokument">Dokument</string>
    <string name="Personfoto">Personfoto</string>
    <string name="Fingeravtrykk">Fingeravtrykk</string>
    <string name="Nummerskilt">Nummerskilt</string>
    <string name="Sok">Søk</string>
    <string name="Historikk">Historikk</string>
    <string name="Kontrolltype">Kontrolltype: Pass</string>
    <string name="title_activity_forside">Person Kontroll</string>
</resources>
