<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".daggerhelpers.forside.ForsideFragment"
    android:gravity="top"
    android:orientation="vertical"
    android:background="#f1f1f2"
    android:weightSum="1">

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/textView"
        android:layout_weight="0.14"
        android:textAlignment="center"
        android:paddingTop="50dp"
        android:textStyle="normal|bold"
        android:background="@drawable/header_selector"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textSize="20dp" />

    <Button
        android:text="@string/Kontrolltype"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/kontrolltype"
        style="@style/Widget.AppCompat.Button"
        android:paddingBottom="10dp"
        android:background="@color/background_button_material_light" />
    <Button
        android:text="@string/Dokument"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/dokument"
        android:drawableLeft="@drawable/dokument_skalert"
        android:drawablePadding="6dp"
        android:paddingBottom="5dp"
        style="@style/Widget.AppCompat.Button.Borderless" />
    <Button
        android:text="@string/Personfoto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/personfoto"
        android:drawableLeft="@drawable/personfoto_skalert"
        android:drawablePadding="6dp"
        android:paddingBottom="5dp"
        style="@style/Widget.AppCompat.Button.Borderless" />
    <Button
        android:text="@string/Fingeravtrykk"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/fingeravtrykk"
        android:drawableLeft="@drawable/fingeravtrykk_skalert"
        android:drawablePadding="6dp"
        android:paddingBottom="5dp"
        style="@style/Widget.AppCompat.Button.Borderless" />
    <Button
        android:text="@string/Nummerskilt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/nummerskilt"
        android:drawableLeft="@drawable/nummerskilt_skalert"
        android:drawablePadding="6dp"
        android:paddingBottom="5dp"
        style="@style/Widget.AppCompat.Button.Borderless" />
    <Button
        android:text="@string/Sok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/sok"
        android:drawableLeft="@drawable/sok_skalert"
        android:drawablePadding="6dp"
        android:paddingBottom="10dp"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingBottom="10dp"
        android:background="@android:color/darker_gray"/>
    <Button
        android:text="@string/Historikk"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/historikk"
        android:drawableLeft="@drawable/historikk_skalert"
        android:drawablePadding="6dp"
        style="@style/Widget.AppCompat.Button.Borderless" />
</LinearLayout>
